// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Report Builder helpers dehydrateFilters should dehydrate filters properly 1`] = `
Array [
  Object {
    "AND": Object {
      "subaccounts": Object {
        "notEq": Array [
          "123",
        ],
      },
      "templates": Object {
        "eq": Array [
          "only thing left",
        ],
      },
    },
  },
]
`;

exports[`Report Builder helpers hydrateFilters should hydrate filters properly 1`] = `
Array [
  Object {
    "AND": Object {
      "templates": Object {
        "eq": Array [
          Object {
            "type": "templates",
            "value": "thing",
          },
        ],
      },
    },
  },
]
`;

exports[`Report Builder helpers hydrateFilters should hydrate subaccount filters correctly 1`] = `
Array [
  Object {
    "AND": Object {
      "subaccounts": Object {
        "eq": Array [
          Object {
            "id": 123,
            "type": "subaccounts",
            "value": "Cool Subaccount Name (ID 123)",
          },
        ],
      },
    },
  },
]
`;
